fixed minor errors in html and started css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 					<img src="images/ham.svg" alt="toggle menu" class="menu" id="menu"> <!-- id is for javascript-->
 				</a> <!-- a makes it clickable, # means it doesnt hyperlink to anywhere-->
 
-				<ul class="show-desktop hide-desktop" id="nav">
-					<li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu"></li>
+				<ul class="show-desktop hide-mobile" id="nav">
+					<li id="exit" class="exit-btn hide-desktop">
+						<img src="images/exit.svg" alt="exit menu">
+					</li>
+					<li><a href="#">home</a></li>
 					<li><a href="#">services</a></li>
 					<li><a href="#">about</a></li>
 					<li><a href="#">contact</a></li>
@@ -30,7 +33,7 @@
 			<img src="images/server.svg" alt="server graphic" class="server">
 
 			<h1>Web Hosting For the Modern Era</h1>
-			<p class="subhead"> Go serverless and play for only what you use</p>
+			<p class="subhead"> Go serverless and pay for only what you use</p>
 
 			<img src="images/scroll.svg" alt="scroll down" class="scroll hide-mobile show-desktop">
 
