finished navigations for mobile use

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<img src="images/ham.svg" alt="toggle menu" class="menu" id="menu"> <!-- id is for javascript-->
 				</a> <!-- a makes it clickable, # means it doesnt hyperlink to anywhere-->
 
-				<ul class="show-desktop hide-mobile" id="nav">
+				<ul class="show-desktop hide-mbile" id="nav">
 					<li id="exit" class="exit-btn hide-desktop">
 						<img src="images/exit.svg" alt="exit menu">
 					</li>
