--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<img src="images/ham.svg" alt="toggle menu" class="menu" id="menu"> <!-- id is for javascript-->
 				</a> <!-- a makes it clickable, # means it doesnt hyperlink to anywhere-->
 
-				<ul class="show-desktop hide-mbile" id="nav">
+				<ul class="show-desktop hide-mobile" id="nav">
 					<li id="exit" class="exit-btn hide-desktop">
 						<img src="images/exit.svg" alt="exit menu">
 					</li>
@@ -33,7 +33,7 @@
 			<img src="images/server.svg" alt="server graphic" class="server">
 
 			<h1>Web Hosting For the Modern Era</h1>
-			<p class="subhead"> Go serverless and pay for only what you use</p>
+			<p class="subhead">Go serverless and pay only for what you use</p>
 
 			<img src="images/scroll.svg" alt="scroll down" class="scroll hide-mobile show-desktop">
 
